
@startuml

skinparam monochrome true
skinparam linetype ortho
scale 2

!define table(x) class x << (T,#FFAAAA) >>
!define view(x) class x << (V,#FFAAAA) >>
!define ent(x) class x << (E,#FFAAAA) >>

!define primary_key(x) <b>PK: x</b>
!define foreign_key(x,reference) <b>FK: </b>x
hide methods
hide stereotypes

table(productTable) {
	primary_key(idProd) INTEGER
	---
	product TEXT
}

table(countryTable) {
	primary_key(idCountry) INTEGER
	---
	country TEXT
}

table(cityTable) {
	primary_key(idCity) INTEGER
	foreign_key(country,countryTable.idCountry) TEXT
	---
	city TEXT
}

table(customerTable) {
	primary_key(idCust) INTEGER
	foreign_key(city,cityTable.idCity) TEXT
	---
	address TEXT
	email TEXT
	name TEXT
}

table(orderTable) {
	primary_key(idOrder) INTEGER
	foreign_key(custId,customerTable.idCust) INTEGER
	---
	date DATE
}

table(orderProductTable) {
	primary_key(orderId) INTEGER
	foreign_key(orderId,orderTable.idOrder) INTEGER
	foreign_key(productId,productTable.idProd) INTEGER
}

cityTable "0..n" -- "1..1" countryTable
customerTable "0..n" -- "1..1" cityTable
orderTable "0..n" -- "1..1" customerTable
orderProductTable "0..n" -- "1..1" orderTable
orderProductTable "0..n" -- "1..1" productTable

@enduml
    
